<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorPrimary">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:adjustViewBounds="true"
                android:background="@color/backgroundColorSecondary"
                android:contentDescription="@string/movie_image"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/movie_detail_poster_cv"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/_110sdp"
                app:strokeWidth="@dimen/_1sdp"
                app:strokeColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_2sdp"
                app:cardBackgroundColor="@color/backgroundColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:theme="@style/AppTheme">

                <ImageView
                    android:id="@+id/movie_detail_poster"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="fitXY" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_view_margin"
                android:text="@string/title"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_subHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_detail_poster_cv"
                app:layout_constraintTop_toBottomOf="@+id/banner_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/overview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_view_margin"
                android:text="@string/overview"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_poster_cv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_view_margin"
                android:text="@string/description"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_title" />

            <View
                android:id="@+id/overview_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/default_view_margin"
                android:background="@color/grey_800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_view_margin"
                android:text="@string/cast"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/default_view_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                tools:listitem="@layout/rv_movie_cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>